[RED] add test for PaymentService